# visualbench

./: README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  tests.yml
examples/: Running NLopt solvers.ipynb  Running directsearch solvers.ipynb  Running nevergrad solvers.ipynb  hyperparameter optimization with Optuna.ipynb
tests/: test_that_it_works.py
visualbench/: __init__.py  _utils.py  benchmark.py  dataloader performance.ipynb  dataset_tools.py  de.ipynb  logger.py  losses.py  rng.py  run   ipyn.ipynb  run.py  run_legacy.py  summary.py  task_testing.py  utils.py
visualbench/_utils/: __init__.py  plotting.py  rendering.py  runs.py  runs_plotting.py  search.py  utils.py
visualbench/data/: __init__.py
visualbench/models/: __init__.py  act.py  basic.py  mnist1d.py  ode.py  ssm.py  torchvision.py  vision.py
visualbench/runs/: benchmark_benchmark.py  benchpack.py  colab_utils.py  mbgs.py  mbs.py  mlbench.py  onedim_vis.py  optimizer_benchmark.py  optimizer_benchmark_v2.py  plotting.py  run.py  visualbench.py
visualbench/tasks/: __init__.py  alpha_evolve_b1.py  boundary.py  box_packing.ipynb  box_packing.py  char_rnn.py  colorization.py  dataset2d.ipynb  dataset2d.py  decision_boundary.py  diffusion.py  function descent.ipynb  function_approximator.py  function_descent.py  gmm.py  gnn.py  graph_layout.py  guassian_processes.py  gymnasium.py  hadamard.py  image_partition.py  image_poly.py  image_rectanges.py  inverse.py  kato.py  katos.py  lennard_jones_clusters.py  linalg.py  lstm.py  marbles.py  minpack2.py  (+28 more)
(+70 files in other folders)
